Clases para las imagenes, perfil y listado de clientes

--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -1,3 +1,5 @@
+<detalle-cliente *ngIf="clienteSeleccionado" [cliente]="clienteSeleccionado"></detalle-cliente>
+
 <div class="card border-primary mb-3">
     <div class="card-header">Clientes</div>
     <div class="card-body text-primary">
@@ -12,7 +14,7 @@
         <table class="table tablet-bordered table-striped" *ngIf="clientes?.length > 0">
             <thead>
                 <tr>
-                    <th>id</th>
+                    <th>Foto</th>
                     <th>nombre</th>
                     <th>apellido</th>
                     <th>email</th>
@@ -23,7 +25,21 @@
             </thead>
             <tbody>
                 <tr *ngFor="let cliente of clientes">
-                    <td>{{ cliente.id }}</td>
+                    <td>
+                        <img (click)="abrirModal(cliente)" 
+                            *ngIf="cliente?.foto" src="http://localhost:8060/api/clientes/uploads/img/{{cliente.foto}}" 
+                            alt="{{cliente.foto}}" 
+                            class="img-thumbnail rounded"
+                            style="width:64px; cursor: pointer;"
+                        >
+
+                        <img (click)="abrirModal(cliente)" 
+                            *ngIf="!cliente?.foto" src="http://localhost:8060/images/notUser.jpg" 
+                            alt="Sin foto" 
+                            class="img-thumbnail rounded"
+                            style="width:64px; cursor: pointer;"
+                        >
+                    </td>
                     <td>{{ cliente.nombre }}</td>
                     <td>{{ cliente.apellido }}</td>
                     <td>{{ cliente.email }}</td>
@@ -39,5 +55,6 @@
                 </tr>
             </tbody>
         </table>
+        <paginator-nav *ngIf="paginador" [paginador] = "paginador"></paginator-nav>
     </div>
 </div>
