--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -1,3 +1,9 @@
+
+<ul class="alert aletr-danger" *ngIf="errores?.length > 0">
+    <li *ngFor="let err of errores">
+        {{ err }}
+    </li>
+</ul>
 <div class="card bg-dark text-white">
     <div class="card-header">{{ titulo }}</div>
     <div class="card-body">
@@ -20,6 +26,16 @@
                 <label for="email" class="col-form-label col-sm-2">Email</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" [(ngModel)]="cliente.email" name="email">
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="region" class="col-form-label col-sm-2">Region</label>
+                <div class="col-sm-6">
+                    <select [compareWith]="compararRegion" type="text" class="form-control" [(ngModel)]="cliente.region" name="region" style="width: 500px;">
+                        <option [ngValue]="undefined"> ---Seleccionar Region--- </option>
+                        <option *ngFor="let region of regiones" [ngValue]="region">{{ region.nombre }}</option>
+                    </select>
                 </div>
             </div>
 
